--- a/platforms/android/app/src/main/assets/www/index.html
+++ b/platforms/android/app/src/main/assets/www/index.html
@@ -32,11 +32,13 @@
             </div>
         </div>
     </div>
-    <div class="container borders">
-        <button type="button" class="btn btn-primary" id="add" data-toggle="modal" data-target="#scheduleModal">
-        <span aria-hidden="true">&plus;</span>
-        </button>
+
+    <div class="container">
         <div id="schedule">
+            <button type="button" class="btn btn-primary" id="add" data-toggle="modal" data-target="#scheduleModal">
+            <span aria-hidden="true">&plus;</span>
+            </button>
+            <div id="schedule-content" class="borders"></div>
         </div>
     </div>
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
@@ -45,6 +47,6 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>    
     <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript" src="js/app.js"></script>    
-    <script src="js/scripts.js"></script>
+    <!--<script src="js/scripts.js"></script>-->
 </body>
 </html>
