--- a/www/index.html
+++ b/www/index.html
@@ -39,7 +39,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
+                        <i class="fa fa-times" aria-hidden="true"></i>
                     </button>
                 </div>
                 <div class="modal-body">
