--- a/platforms/browser/www/index.html
+++ b/platforms/browser/www/index.html
@@ -16,42 +16,77 @@
 </head>
 
 <body>
-    <div id="scheduleModal" class="modal fade" tabindex="-1" role="dialog">
+    <div id="schedule">
+        <button type="button" class="btn btn-primary switch">
+            <i class="fa fa-clock-o" aria-hidden="true"></i>
+        </button>
+        <button type="button" class="btn btn-primary" id="add" data-toggle="modal" data-target="#schedule-modal">
+            <i class="fa fa-plus" aria-hidden="true"></i>
+        </button>
+        <div id="schedule-content" class="borders"></div>
+    </div>
+    <div id="clock" class="hide">
+        <button type="button" class="btn btn-primary switch">
+            <i class="fa fa-calendar" aria-hidden="true"></i>
+        </button>
+        <div id="clock-content"></div>
+    </div>
+
+    <div id="schedule-modal" class="modal fade" tabindex="-1" role="dialog">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
+                        <i class="fa fa-times" aria-hidden="true"></i>
                     </button>
                 </div>
                 <div class="modal-body">
-                    <p>Test</p>
+                    <form>
+                        <label>Event Name</label><input type="text" id="name" maxlength="30" />
+                        <label>Start Time</label><input type="time" id="start" step="900" />
+                        <label>Event Duration (minutes)</label><input type="number" id="duration" min="15" />
+                        <label>Event Color (RGB)</label><input type="color" id="color" />
+                        <label>Background Image</label><input id="image" type="file" />
+                    </form>
                 </div>
                 <div class="modal-footer">
                     <!--<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>-->
-                    <button type="button" class="btn btn-primary">Save</button>
+                    <button type="button" id="save" class="btn btn-primary">
+                        <i class="fa fa-save" aria-hidden="true"></i>
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div id="edit-schedule-modal" class="modal fade" tabindex="-1" role="dialog">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <i class="fa fa-times" aria-hidden="true"></i>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <label>Event Name</label><input type="text" id="name" maxlength="30" />
+                        <label>Start Time</label><input type="time" id="start" step="900" disabled />
+                        <label>Event Duration (minutes)</label><input type="number" id="duration" min="15"/>
+                        <label>Event Color (RGB)</label><input type="color" id="color" />
+                        <label>Background Image</label><input id="image" type="file" />
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" id="delete" class="btn btn-danger">
+                        <i class="fa fa-trash" aria-hidden="true"></i>
+                    </button>
+                    <button type="button" id="update" class="btn btn-primary">
+                        <i class="fa fa-save" aria-hidden="true"></i>
+                    </button>
                 </div>
             </div>
         </div>
     </div>
 
-    <div class="container">
-        <div id="schedule" class="hide">
-            <button type="button" class="btn btn-primary switch">
-                <i class="fa fa-clock-o" aria-hidden="true"></i>
-            </button>
-            <button type="button" class="btn btn-primary" id="add" data-toggle="modal" data-target="#scheduleModal">
-            <span aria-hidden="true">&plus;</span>
-            </button>
-            <div id="schedule-content" class="borders"></div>
-        </div>
-        <div id="clock">
-            <button type="button" class="btn btn-primary switch">
-                <i class="fa fa-calendar" aria-hidden="true"></i>
-            </button>
-            <div id="clock-content"></div>
-        </div>
-    </div>
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
     <!--<script src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
