--- a/www/index.html
+++ b/www/index.html
@@ -16,22 +16,24 @@
 </head>
 
 <body>
-    <div class="container">
-        <div id="schedule">
+    <div id="schedule">
+        <div class="buttons">
             <button type="button" class="btn btn-primary switch">
                 <i class="fa fa-clock-o" aria-hidden="true"></i>
             </button>
             <button type="button" class="btn btn-primary" id="add" data-toggle="modal" data-target="#schedule-modal">
                 <i class="fa fa-plus" aria-hidden="true"></i>
             </button>
-            <div id="schedule-content" class="borders"></div>
         </div>
-        <div id="clock" class="hide">
+        <div id="schedule-content" class="borders"></div>
+    </div>
+    <div id="clock" class="hide">
+        <div class="buttons">
             <button type="button" class="btn btn-primary switch">
                 <i class="fa fa-calendar" aria-hidden="true"></i>
             </button>
-            <div id="clock-content"></div>
         </div>
+        <div id="clock-content"></div>
     </div>
 
     <div id="schedule-modal" class="modal fade" tabindex="-1" role="dialog">
@@ -54,6 +56,34 @@
                 <div class="modal-footer">
                     <!--<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>-->
                     <button type="button" id="save" class="btn btn-primary">
+                        <i class="fa fa-save" aria-hidden="true"></i>
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div id="edit-schedule-modal" class="modal fade" tabindex="-1" role="dialog">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <i class="fa fa-times" aria-hidden="true"></i>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <label>Event Name</label><input type="text" id="edit-name" maxlength="30" />
+                        <label>Start Time</label><input type="time" id="edit-start" step="900" disabled />
+                        <label>Event Duration (minutes)</label><input type="number" id="edit-duration" min="15"/>
+                        <label>Event Color (RGB)</label><input type="color" id="edit-color" />
+                        <label>Background Image</label><input id="edit-image" type="file" />
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" id="delete" class="btn btn-danger">
+                        <i class="fa fa-trash" aria-hidden="true"></i>
+                    </button>
+                    <button type="button" id="update" class="btn btn-primary">
                         <i class="fa fa-save" aria-hidden="true"></i>
                     </button>
                 </div>
