--- a/platforms/android/app/src/main/assets/www/index.html
+++ b/platforms/android/app/src/main/assets/www/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <div id="schedule">
+    <div id="schedule" class="hide">
         <div class="buttons">
             <button type="button" class="btn btn-primary switch">
                 <i class="fa fa-clock-o" aria-hidden="true"></i>
@@ -27,7 +27,7 @@
         </div>
         <div id="schedule-content" class="borders"></div>
     </div>
-    <div id="clock" class="hide">
+    <div id="clock">
         <div class="buttons">
             <button type="button" class="btn btn-primary switch">
                 <i class="fa fa-calendar" aria-hidden="true"></i>
@@ -45,45 +45,27 @@
                     </button>
                 </div>
                 <div class="modal-body">
-                    <form>
-                        <label>Event Name</label><input type="text" id="name" maxlength="30" />
-                        <label>Start Time</label><input type="time" id="start" step="900" />
-                        <label>Event Duration (minutes)</label><input type="number" id="duration" min="15" />
-                        <label>Event Color (RGB)</label><input type="color" id="color" />
-                        <label>Background Image</label><input id="image" type="file" />
+                    <form id="schedule-form">
+                        <label for="name">Event Name</label><input type="text" id="name" class="form-control" maxlength="30" />
+                        <label for="start">Start Time</label><!--<input type="time" id="start" class="form-control" step="900" />-->
+                        <input type="number" id="shr" class="hw form-control" min="0" max="23" placeholder="Hrs" />
+                        <input type="number" id="smin" class="hw form-control" min="0" max="59" step="15" placeholder="Mins" />                        
+                        <label for="duration">Event Duration</label>
+                        <input type="number" id="dhr" class="hw form-control" min="0" max="16" placeholder="Hrs" />
+                        <input type="number" id="dmin" class="hw form-control" min="0" max="59" step="15" placeholder="Mins" />
+                        <label for="color">Event Color</label><input type="color" id="color" class="hw form-control" />
+                        <label for="image">Background Image</label><input id="image" class="form-control" type="file" />
                     </form>
                 </div>
                 <div class="modal-footer">
                     <!--<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>-->
-                    <button type="button" id="save" class="btn btn-primary">
-                        <i class="fa fa-save" aria-hidden="true"></i>
-                    </button>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div id="edit-schedule-modal" class="modal fade" tabindex="-1" role="dialog">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <i class="fa fa-times" aria-hidden="true"></i>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    <form>
-                        <label>Event Name</label><input type="text" id="edit-name" maxlength="30" />
-                        <label>Start Time</label><input type="time" id="edit-start" step="900" disabled />
-                        <label>Event Duration (minutes)</label><input type="number" id="edit-duration" min="15"/>
-                        <label>Event Color (RGB)</label><input type="color" id="edit-color" />
-                        <label>Background Image</label><input id="edit-image" type="file" />
-                    </form>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" id="delete" class="btn btn-danger">
+                    <button type="button" id="delete" class="btn btn-danger hide">
                         <i class="fa fa-trash" aria-hidden="true"></i>
                     </button>
-                    <button type="button" id="update" class="btn btn-primary">
+                    <button type="button" id="update" class="btn btn-primary hide">
+                        <i class="fa fa-save" aria-hidden="true"></i>
+                    </button>
+                    <button type="button" id="save" class="btn btn-primary">
                         <i class="fa fa-save" aria-hidden="true"></i>
                     </button>
                 </div>
