Additional tweaks to file save function

--- a/platforms/android/app/src/main/assets/www/index.html
+++ b/platforms/android/app/src/main/assets/www/index.html
@@ -38,7 +38,11 @@
             </div>
         </div>
     </div>
-
+    <div id="loading">
+        <div class="center">
+            <div class="spinner-border text-info"></div>
+        </div>
+    </div>
     <div id="schedule-modal" class="modal fade" tabindex="-1" role="dialog">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
